# bwt_compression

./: CMakeLists.txt  README.md  description.md  launching.md  tests.md  theory.md
.github/workflows/: CI.yml
include/: BWT.h  CompressDecompress.h  InputOutout.h  LZW.h  SuffixTree.h  compression.h  decompression.h  functions.h  test.h  variables.h
results/: compressed.txt
source/: BWT.cpp  CompressDecompress.cpp  InputOutput.cpp  LZW.cpp  SuffixTree.cpp  compression.cpp  decompression.cpp  functions.cpp  main.cpp  test.cpp
tests/: text001.txt  text002.txt  text003.txt  text004.txt  text005.txt
